# blessing-from-xiaowulang

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_zh.md  vcpkg-configuration.json  多态_虚函数表.sln
README/: release-note.md  release-note_zh.md  usage.md  usage_zh.md
vptr/: CMakeLists.txt  README.md  main.cpp
vptr/MSVC152_16bit/: .gitignore  COURSE.MAK  ROCK.MAK  WULANG.MAK  main_course.cpp  main_rock.cpp  main_xiaowulang.cpp
多态_虚函数表/: main.cpp  多态_虚函数表.vcxproj
