#=============================================================================
# 全局配置
#=============================================================================
cmake_minimum_required(VERSION 3.28)
# TODO: 其它全局设置。

#=============================================================================
# 项目信息
#=============================================================================
project(
  "better-qi-niu"
  VERSION "0.1.0.0"
  DESCRIPTION "一些奇牛学院的代码示例，用于讲解潘老师精湛的技术。"
  HOMEPAGE_URL https://www.qiniuxueyuan.com/
  LANGUAGES CXX C
)

#=============================================================================
# 子项目
#=============================================================================
add_subdirectory("vptr")
# TODO: 包含其它子项目。
