#=============================================================================
# 生成配置
#=============================================================================
# 添加可执行文件。
add_executable("pointer_course" "main_course.cpp")
add_executable("pointer_rock" "main_rock.cpp")
add_executable("pointer_xiaowulang" "main_xiaowulang.cpp")
